# verdigris-compiler

./: Cargo.toml  README.md
src/: ast.rs  compile.rs  lexer.rs  main.rs  parser.rs  reparse.rs  semant.rs  typechecker.rs
src/ast/: data_types.rs  decl.rs  expr.rs  mod.rs  patterns.rs  types.rs
src/parser/: data_types.rs  decl.rs  expr.rs  mod.rs  patterns.rs  tests.rs  types.rs
src/reparse/: data_types.rs  decl.rs  expr.rs  mod.rs  patterns.rs  types.rs
src/typechecker/: data_types.rs  mod.rs
testfiles/: add.vg
