[package]
name = "verdigris-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true

[dependencies]
nom = ">=7.1, <8.0.0"
nom_locate = "4.0"
miette = { version = "5.5", features = ["fancy"] }
nom-supreme = "0.8"
thiserror = "1.0"