[package]
name = "verdigris-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true

[dependencies]
logos = "0.12"
rowan = "0.15.10"
miette = { version = "5.5", features = ["fancy"] }
thiserror = "1.0"
smol_str = "0.2"
index_vec = "0.1.3"